fixed cell type in ipython

--- a/HBridgeDriver.ipynb
+++ b/HBridgeDriver.ipynb
@@ -130,10 +130,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "## from migen.build.platforms import pipistrello\n",
+    "from migen.build.platforms import pipistrello\n",
     "from migen.build.generic_platform import *\n",
     "\n",
     "# generic connector from old artiq target file\n",
@@ -189,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.4.5"
   }
  },
  "nbformat": 4,
